--- a/platform/package.json
+++ b/platform/package.json
@@ -8,6 +8,7 @@
     "ble-controller": "^1.2.0",
     "body-parser": "latest",
     "cors": "^2.8.5",
+    "cron": "^1.8.2",
     "debug": "^4.1.1",
     "dirty": "^1.1.0",
     "express": "^4.16.4",
